test/grammar/schema/inherit/cycle_inherit_fail_4/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/pkg/b.k:1:8
  |
1 | schema B(C):
  |        ^ There is a circular reference between schemas pkg.B, pkg.C
  |

error[E2L23]: CompileError
 --> ${CWD}/pkg/c.k:1:8
  |
1 | schema C(B):
  |        ^ There is a circular reference between schemas pkg.B, pkg.C
  |

error[E2L23]: CompileError
 --> ${CWD}/main.k:9:5
  |
9 |     fields: "asa",
  |     ^ Cannot add member 'fields' to schema 'Son', did you mean '["field"]'?
  |